# bondmaster-excel

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bondmaster_excel/: __init__.py  udfs.py  xloil.toml
docs/: PRD.md
examples/: GettingStarted.md  PortfolioTemplate.csv
scripts/: install.bat  install.ps1
tests/: __init__.py  test_udfs.py
