[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bondmaster-excel"
version = "0.1.0"
description = "Excel add-in for BondMaster bond reference data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jeff", email = "jeff@openclaw.local" }
]
keywords = ["excel", "bonds", "xll", "add-in", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "xloil>=0.19",
    "httpx>=0.25.0",
    "bondmaster>=0.1.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

[project.urls]
Repository = "https://github.com/JeffExec/bondmaster-excel"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # Line too long
    "N802",   # Function name should be lowercase (Excel UDFs need uppercase)
    "W293",   # Blank line contains whitespace (in docstrings)
]

[tool.mypy]
python_version = "3.11"
strict = true
# xloil is a Windows-only runtime library without type stubs
# The untyped-decorator errors are unavoidable
ignore_missing_imports = true
disable_error_code = ["untyped-decorator"]
